# am64

./: README.md  rpmsg_char_simple
communicationProject/: Ethernet_Communication.cpp  Ethernet_Communication.hpp  SystemManager.cpp  communication.cpp
communicationProject/utils/: utils_communication.hpp
controlling_gpios/: gpio_led_blink.c
embedded_kafka/broker_communication/: embedded_kafka.cpp
embedded_kafka/configurerR5_broker_testing/: embedded_kafka.cpp
embedded_kafka/direct_communication_test/: embedded_kafka.cpp
embedded_kafka/linux_and_direct_communication/: backup_working_linux_and_direct.cpp  embedded_kafka.cpp
embedded_kafka/linux_direct_communication_test/: embedded_kafka.cpp
embedded_kafka/task_testing/: embedded_kafka.cpp
examples/: .gitignore  Makefile  Makefile.am  Makefile.in  README  rpmsg_char_simple
examples/.deps/: rpmsg_char_simple-rpmsg_char_simple.Po
last/broker_latency_testing/: embedded_kafka.cpp  embedded_kafka_m4.cpp
last/broker_latency_testing_linux/: embedded_kafka.cpp  sends_executable.sh
last/broker_latency_testing_poll/: embedded_kafka.cpp  embedded_kafka_m4.cpp
last/broker_latency_testing_poll_linux/: embedded_kafka.cpp  embedded_kafka_m4.cpp  sends_executable.sh
last/configurerR5_broker_testing/: embedded_kafka.cpp
last/demo/: IPC_Communication.h  empty.cpp
last/demo_cpp/: Communication.h
last/direct_communication_test/: embedded_kafka.cpp
last/embedded_kafka/: embedded_kafka.cpp
linux_side/: linux_direct_communication.cpp
mcu_plus_sdk_am64x_08_05_00_24/: imports.mak  makefile
(+6422 files in other folders)
